# OpenSyndicationProtocol

./: Cargo.toml  README.md
crates/client/: Cargo.toml
crates/data/: Cargo.toml
crates/data/src/: de.rs  error.rs  lib.rs  registry.rs  ser.rs
crates/data/src/serde/: mod.rs  ser.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: handshake.rs  lib.rs  protocol.rs  url.rs  utils.rs
crates/protocol/src/packet/: data.rs  handshake.rs  mod.rs  server.rs  transfer.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  node.rs
crates/server/src/connection/: inbound.rs  mod.rs  outbound.rs
crates/server/src/util/: storage.rs
examples/test_server_implementation/: Cargo.toml  README.md  genkeys.sh
examples/test_server_implementation/src/: main.rs
protocol/: Cargo.toml
protocol/src/: handshake.rs  lib.rs  response.rs  server.rs  utils.rs
server/: Cargo.toml
server/src/: node.rs
server/src/connection/: inbound.rs  outbound.rs
