[workspace]
resolver = "2"

members = [
    "crates/*",
    "examples/*"
]

[workspace.dependencies]
osp_data = { version = "=0.0.1", path = "crates/data" }
osp_protocol = { version = "=0.0.1", path = "crates/protocol" }
osp_server_sdk = { version = "=0.0.1", path = "crates/server" }
osp_client_sdk = { version = "=0.0.1", path = "crates/client" }

