[package]
name = "osp_protocol"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.2"
uuid = "1.8.0"
tokio = { version = "1", features = ["full"] }
tokio-byteorder = "0.3.0"
bytes = "1.6.0"
tokio-util = { version = "0.7.11", features = ["compat", "codec"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
futures-util = { version = "0.3.30", features = ["sink", "tokio-io", "futures-sink"] }
