[package]
name = "osp_protocol"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal Crates
osp_data = { workspace = true }

# External Crates
url = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
futures-util = { version = "0.3.30", features = ["futures-sink", "sink"] }
tokio-byteorder = "0.3.0"
