[package]
name = "osp_server_sdk"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
openssl = "0.10.64"
osp_protocol = { workspace = true }
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.23.2"
url = "2.5.2"
uuid = { version = "1.8.0", features = ["v4"]}
