[package]
name = "osp_server_sdk"
version = "0.0.1"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal crates
osp_data = { workspace = true }
osp_protocol = { workspace = true }

# External Crates
log = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
bytes = "1.6.0"
tokio = { workspace = true }
bincode = { workspace = true }
openssl = { workspace = true }
trust-dns-resolver = "0.23.2"
