[package]
name = "test_server_implementation"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal Crates
osp_data = { workspace = true }
osp_protocol = { workspace = true }
osp_server_sdk = { workspace = true }

# External Crates
url = { workspace = true }
log = { workspace = true }
clap = { version = "4.5.7", features = ["derive"] }
tokio = { workspace = true }
colog = "1.3.0"
openssl = { workspace = true }
